Revision 7 -- 20/03/2023 -- Pmatpal -- Subida actividad 5 completa

--- a/Actividad 5/Actividad5.1
+++ b/Actividad 5/Actividad5.1
@@ -16,4 +16,4 @@ insert node
 </autor>
 </Autores>
 </libro>
-before doc("DB_Libro.xml")//Libros/libro
+before doc("BD_Libros.xml")//Libros/libro[1]
